// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth2faType: off 1`] = `
.c0 {
  box-sizing: border-box;
  background-color: #222C59;
  margin-top: 32px;
  margin-bottom: 32px;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 24px;
  width: 464px;
}

.c3 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 0;
  width: 100%;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  margin-bottom: 4px;
  width: 100%;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: #651FFF;
}

.c11:active {
  background: #354AA4;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c1 {
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c6 {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.c9 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background-color: #FFFFFF;
  color: #324148;
  margin-top: 4px;
}

.c9::-ms-clear {
  display: none;
}

.c9::placeholder {
  opacity: 0.4;
}

.c9:read-only {
  cursor: not-allowed;
}

.c8 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  padding-top: 24px;
  color: #FFFFFF;
  text-align: center;
}

.c4 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

<div
  class="c0 c1"
  width="464"
>
  <div
    class="c2"
    color="light"
  >
    Custom Title
  </div>
  <div
    class="c3"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c4"
    >
      <div
        class="c3"
      >
        <form
          class="c5 c6"
          data-testid="userpassword"
        >
          <div
            class="c7"
          >
            <label
              class="c8"
            >
              Username
              <input
                autocomplete="off"
                class="c9"
                color="text.onLight"
                inputmode="text"
                placeholder="Username"
                type="text"
                value=""
              />
            </label>
          </div>
          <div
            class="c7"
          >
            <div
              class="c10"
              width="100%"
            >
              <label
                class="c8"
              >
                Password
                <input
                  autocomplete="off"
                  class="c9"
                  color="text.onLight"
                  inputmode="text"
                  placeholder="Password"
                  type="password"
                  value=""
                />
              </label>
            </div>
          </div>
          <button
            class="c11"
            kind="primary"
            type="submit"
            width="100%"
          >
            Sign In
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`auth2faType: optional rendering 1`] = `
.c0 {
  box-sizing: border-box;
  background-color: #222C59;
  margin-top: 32px;
  margin-bottom: 32px;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 24px;
  width: 464px;
}

.c3 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 0;
  width: 100%;
}

.c12 {
  box-sizing: border-box;
  margin-bottom: 0;
  margin-right: 16px;
  max-width: 50%;
  width: 100%;
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  margin-bottom: 4px;
  width: 100%;
}

.c15:active {
  opacity: 0.56;
}

.c15:hover,
.c15:focus {
  background: #651FFF;
}

.c15:active {
  background: #354AA4;
}

.c15:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c1 {
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c6 {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.c11 {
  display: flex;
  align-items: flex-end;
}

.c9 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background-color: #FFFFFF;
  color: #324148;
  margin-top: 4px;
}

.c9::-ms-clear {
  display: none;
}

.c9::placeholder {
  opacity: 0.4;
}

.c9:read-only {
  cursor: not-allowed;
}

.c8 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0;
}

.c13 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  padding-top: 24px;
  color: #FFFFFF;
  text-align: center;
}

.c4 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c14 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c14 .react-select__control,
.c14 .react-select__control--is-focused {
  min-height: 40px;
  height: 40px;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c14 .react-select__control:hover,
.c14 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c14 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c14 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c14 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c14 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c14 .react-select__menu {
  margin-top: 0px;
}

.c14 .react-select__indicator-separator {
  display: none;
}

.c14 .react-select__loading-indicator {
  display: none;
}

.c14 .react-select--is-disabled .react-select__single-value,
.c14 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c14 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

<div
  class="c0 c1"
  width="464"
>
  <div
    class="c2"
    color="light"
  >
    Custom Title
  </div>
  <div
    class="c3"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c4"
    >
      <div
        class="c3"
      >
        <form
          class="c5 c6"
          data-testid="userpassword"
        >
          <div
            class="c7"
          >
            <label
              class="c8"
            >
              Username
              <input
                autocomplete="off"
                class="c9"
                color="text.onLight"
                inputmode="text"
                placeholder="Username"
                type="text"
                value=""
              />
            </label>
          </div>
          <div
            class="c7"
          >
            <div
              class="c10"
              width="100%"
            >
              <label
                class="c8"
              >
                Password
                <input
                  autocomplete="off"
                  class="c9"
                  color="text.onLight"
                  inputmode="text"
                  placeholder="Password"
                  type="password"
                  value=""
                />
              </label>
            </div>
          </div>
          <div
            class="c7"
          >
            <div
              class="c3 c11"
            >
              <div
                class="c12"
                data-testid="mfa-select"
                width="100%"
              >
                <label
                  class="c13"
                  for="select"
                >
                  Two-factor type
                </label>
                <div
                  class="c14"
                >
                  <div
                    class="react-select-container css-2b097c-container"
                  >
                    <div
                      class="react-select__control css-yk16xz-control"
                    >
                      <div
                        class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                      >
                        <div
                          class="react-select__single-value css-1uccc91-singleValue"
                        >
                          Hardware Key
                        </div>
                        <input
                          aria-autocomplete="list"
                          class="css-62g3xt-dummyInput"
                          id="select"
                          readonly=""
                          tabindex="0"
                          value=""
                        />
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-6q0nyr-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="c15"
            kind="primary"
            type="submit"
            width="100%"
          >
            Sign In
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`auth2faType: otp rendering 1`] = `
.c0 {
  box-sizing: border-box;
  background-color: #222C59;
  margin-top: 32px;
  margin-bottom: 32px;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 24px;
  width: 464px;
}

.c3 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 0;
  width: 100%;
}

.c12 {
  box-sizing: border-box;
  margin-bottom: 0;
  margin-right: 16px;
  max-width: 50%;
  width: 100%;
}

.c15 {
  box-sizing: border-box;
  margin-bottom: 0;
  width: 50%;
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  margin-bottom: 4px;
  width: 100%;
}

.c16:active {
  opacity: 0.56;
}

.c16:hover,
.c16:focus {
  background: #651FFF;
}

.c16:active {
  background: #354AA4;
}

.c16:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c1 {
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c6 {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.c11 {
  display: flex;
  align-items: flex-end;
}

.c9 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background-color: #FFFFFF;
  color: #324148;
  margin-top: 4px;
}

.c9::-ms-clear {
  display: none;
}

.c9::placeholder {
  opacity: 0.4;
}

.c9:read-only {
  cursor: not-allowed;
}

.c8 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0;
}

.c13 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  padding-top: 24px;
  color: #FFFFFF;
  text-align: center;
}

.c4 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c14 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c14 .react-select__control,
.c14 .react-select__control--is-focused {
  min-height: 40px;
  height: 40px;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c14 .react-select__control:hover,
.c14 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c14 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c14 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c14 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c14 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c14 .react-select__menu {
  margin-top: 0px;
}

.c14 .react-select__indicator-separator {
  display: none;
}

.c14 .react-select__loading-indicator {
  display: none;
}

.c14 .react-select--is-disabled .react-select__single-value,
.c14 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c14 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

<div
  class="c0 c1"
  width="464"
>
  <div
    class="c2"
    color="light"
  >
    Custom Title
  </div>
  <div
    class="c3"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c4"
    >
      <div
        class="c3"
      >
        <form
          class="c5 c6"
          data-testid="userpassword"
        >
          <div
            class="c7"
          >
            <label
              class="c8"
            >
              Username
              <input
                autocomplete="off"
                class="c9"
                color="text.onLight"
                inputmode="text"
                placeholder="Username"
                type="text"
                value=""
              />
            </label>
          </div>
          <div
            class="c7"
          >
            <div
              class="c10"
              width="100%"
            >
              <label
                class="c8"
              >
                Password
                <input
                  autocomplete="off"
                  class="c9"
                  color="text.onLight"
                  inputmode="text"
                  placeholder="Password"
                  type="password"
                  value=""
                />
              </label>
            </div>
          </div>
          <div
            class="c7"
          >
            <div
              class="c3 c11"
            >
              <div
                class="c12"
                data-testid="mfa-select"
                width="100%"
              >
                <label
                  class="c13"
                  for="select"
                >
                  Two-factor type
                </label>
                <div
                  class="c14"
                >
                  <div
                    class="react-select-container css-2b097c-container"
                  >
                    <div
                      class="react-select__control css-yk16xz-control"
                    >
                      <div
                        class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                      >
                        <div
                          class="react-select__single-value css-1uccc91-singleValue"
                        >
                          Authenticator App
                        </div>
                        <input
                          aria-autocomplete="list"
                          class="css-62g3xt-dummyInput"
                          id="select"
                          readonly=""
                          tabindex="0"
                          value=""
                        />
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-6q0nyr-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="c15"
                width="50%"
              >
                <label
                  class="c8"
                >
                  Authenticator code
                  <input
                    autocomplete="one-time-code"
                    class="c9"
                    color="text.onLight"
                    inputmode="numeric"
                    placeholder="123 456"
                    type="text"
                    value=""
                  />
                </label>
              </div>
            </div>
          </div>
          <button
            class="c16"
            kind="primary"
            type="submit"
            width="100%"
          >
            Sign In
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`auth2faType: webauthn rendering 1`] = `
.c0 {
  box-sizing: border-box;
  background-color: #222C59;
  margin-top: 32px;
  margin-bottom: 32px;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 24px;
  width: 464px;
}

.c3 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 0;
  width: 100%;
}

.c12 {
  box-sizing: border-box;
  margin-bottom: 0;
  margin-right: 16px;
  max-width: 50%;
  width: 100%;
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  margin-bottom: 4px;
  width: 100%;
}

.c15:active {
  opacity: 0.56;
}

.c15:hover,
.c15:focus {
  background: #651FFF;
}

.c15:active {
  background: #354AA4;
}

.c15:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c1 {
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c6 {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.c11 {
  display: flex;
  align-items: flex-end;
}

.c9 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background-color: #FFFFFF;
  color: #324148;
  margin-top: 4px;
}

.c9::-ms-clear {
  display: none;
}

.c9::placeholder {
  opacity: 0.4;
}

.c9:read-only {
  cursor: not-allowed;
}

.c8 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0;
}

.c13 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  padding-top: 24px;
  color: #FFFFFF;
  text-align: center;
}

.c4 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c14 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c14 .react-select__control,
.c14 .react-select__control--is-focused {
  min-height: 40px;
  height: 40px;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c14 .react-select__control:hover,
.c14 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c14 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c14 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c14 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c14 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c14 .react-select__menu {
  margin-top: 0px;
}

.c14 .react-select__indicator-separator {
  display: none;
}

.c14 .react-select__loading-indicator {
  display: none;
}

.c14 .react-select--is-disabled .react-select__single-value,
.c14 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c14 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

<div
  class="c0 c1"
  width="464"
>
  <div
    class="c2"
    color="light"
  >
    Custom Title
  </div>
  <div
    class="c3"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c4"
    >
      <div
        class="c3"
      >
        <form
          class="c5 c6"
          data-testid="userpassword"
        >
          <div
            class="c7"
          >
            <label
              class="c8"
            >
              Username
              <input
                autocomplete="off"
                class="c9"
                color="text.onLight"
                inputmode="text"
                placeholder="Username"
                type="text"
                value=""
              />
            </label>
          </div>
          <div
            class="c7"
          >
            <div
              class="c10"
              width="100%"
            >
              <label
                class="c8"
              >
                Password
                <input
                  autocomplete="off"
                  class="c9"
                  color="text.onLight"
                  inputmode="text"
                  placeholder="Password"
                  type="password"
                  value=""
                />
              </label>
            </div>
          </div>
          <div
            class="c7"
          >
            <div
              class="c3 c11"
            >
              <div
                class="c12"
                data-testid="mfa-select"
                width="100%"
              >
                <label
                  class="c13"
                  for="select"
                >
                  Two-factor type
                </label>
                <div
                  class="c14"
                >
                  <div
                    class="react-select-container css-2b097c-container"
                  >
                    <div
                      class="react-select__control css-yk16xz-control"
                    >
                      <div
                        class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                      >
                        <div
                          class="react-select__single-value css-1uccc91-singleValue"
                        >
                          Hardware Key
                        </div>
                        <input
                          aria-autocomplete="list"
                          class="css-62g3xt-dummyInput"
                          id="select"
                          readonly=""
                          tabindex="0"
                          value=""
                        />
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-6q0nyr-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="c15"
            kind="primary"
            type="submit"
            width="100%"
          >
            Sign In
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`cloud auth2faType: on rendering 1`] = `
.c0 {
  box-sizing: border-box;
  background-color: #222C59;
  margin-top: 32px;
  margin-bottom: 32px;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 24px;
  width: 464px;
}

.c3 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 4px;
}

.c11 {
  box-sizing: border-box;
  margin-bottom: 0;
  width: 100%;
}

.c12 {
  box-sizing: border-box;
  text-align: right;
}

.c15 {
  box-sizing: border-box;
  margin-bottom: 8px;
}

.c17 {
  box-sizing: border-box;
  margin-bottom: 0;
  margin-right: 16px;
  max-width: 50%;
  width: 100%;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #651FFF;
}

.c13:active {
  background: #354AA4;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c20 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  margin-bottom: 4px;
  width: 100%;
}

.c20:active {
  opacity: 0.56;
}

.c20:hover,
.c20:focus {
  background: #651FFF;
}

.c20:active {
  background: #354AA4;
}

.c20:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c14 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  padding: 0 8px;
}

.c14:hover,
.c14:focus {
  background: #222C59;
}

.c1 {
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c6 {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.c16 {
  display: flex;
  align-items: flex-end;
}

.c9 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background-color: #FFFFFF;
  color: #324148;
  margin-top: 4px;
}

.c9::-ms-clear {
  display: none;
}

.c9::placeholder {
  opacity: 0.4;
}

.c9:read-only {
  cursor: not-allowed;
}

.c8 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0;
}

.c18 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  padding-top: 24px;
  color: #FFFFFF;
  text-align: center;
}

.c4 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c19 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c19 .react-select__control,
.c19 .react-select__control--is-focused {
  min-height: 40px;
  height: 40px;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c19 .react-select__control:hover,
.c19 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c19 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c19 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c19 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c19 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c19 .react-select__menu {
  margin-top: 0px;
}

.c19 .react-select__indicator-separator {
  display: none;
}

.c19 .react-select__loading-indicator {
  display: none;
}

.c19 .react-select--is-disabled .react-select__single-value,
.c19 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c19 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

<div
  class="c0 c1"
  width="464"
>
  <div
    class="c2"
    color="light"
  >
    Teleport Cloud
  </div>
  <div
    class="c3"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c4"
    >
      <div
        class="c3"
      >
        <form
          class="c5 c6"
          data-testid="userpassword"
        >
          <div
            class="c7"
          >
            <label
              class="c8"
            >
              Username
              <input
                autocomplete="off"
                class="c9"
                color="text.onLight"
                inputmode="text"
                placeholder="Username"
                type="text"
                value=""
              />
            </label>
          </div>
          <div
            class="c10"
          >
            <div
              class="c11"
              width="100%"
            >
              <label
                class="c8"
              >
                Password
                <input
                  autocomplete="off"
                  class="c9"
                  color="text.onLight"
                  inputmode="text"
                  placeholder="Password"
                  type="password"
                  value=""
                />
              </label>
            </div>
            <div
              class="c12"
            >
              <a
                class="c13 c14"
                style="padding: 0px; min-height: 0;"
              >
                Forgot Password?
              </a>
            </div>
          </div>
          <div
            class="c15"
          >
            <div
              class="c3 c16"
            >
              <div
                class="c17"
                data-testid="mfa-select"
                width="100%"
              >
                <label
                  class="c18"
                  for="select"
                >
                  Two-factor type
                </label>
                <div
                  class="c19"
                >
                  <div
                    class="react-select-container css-2b097c-container"
                  >
                    <div
                      class="react-select__control css-yk16xz-control"
                    >
                      <div
                        class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                      >
                        <div
                          class="react-select__single-value css-1uccc91-singleValue"
                        >
                          Hardware Key
                        </div>
                        <input
                          aria-autocomplete="list"
                          class="css-62g3xt-dummyInput"
                          id="select"
                          readonly=""
                          tabindex="0"
                          value=""
                        />
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-6q0nyr-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <a
              class="c13 c14"
              style="padding: 0px; min-height: 0;"
            >
              Lost Two-Factor Device?
            </a>
          </div>
          <button
            class="c20"
            kind="primary"
            type="submit"
            width="100%"
          >
            Sign In
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`no login enabled 1`] = `
.c3 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
  margin-top: 32px;
  margin-bottom: 32px;
}

.c3 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  background-color: #222C59;
  margin-top: 32px;
  margin-bottom: 32px;
  margin-left: auto;
  margin-right: auto;
  padding-left: 32px;
  padding-right: 32px;
  padding-bottom: 24px;
  width: 464px;
}

.c1 {
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  padding-top: 24px;
  color: #FFFFFF;
  text-align: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin-bottom: 8px;
  width: 100%;
}

<div
  class="c0 c1"
  width="464px"
>
  <div
    class="c2"
    color="light"
  >
    Welcome!
  </div>
  <div
    class="c3"
    kind="danger"
  >
    Login has not been enabled
  </div>
  <div
    class="c4"
    width="100%"
  >
    The ability to login has not been enabled. Please contact your system administrator for more information.
  </div>
</div>
`;

exports[`server error rendering 1`] = `
.c3 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
  margin: 32px;
  margin-bottom: 0;
}

.c3 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  background-color: #222C59;
  margin-top: 32px;
  margin-bottom: 32px;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 24px;
  width: 464px;
}

.c4 {
  box-sizing: border-box;
}

.c6 {
  box-sizing: border-box;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c11 {
  box-sizing: border-box;
  margin-bottom: 0;
  width: 100%;
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  margin-bottom: 4px;
  width: 100%;
}

.c12:active {
  opacity: 0.56;
}

.c12:hover,
.c12:focus {
  background: #651FFF;
}

.c12:active {
  background: #354AA4;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c1 {
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c7 {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.c10 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background-color: #FFFFFF;
  color: #324148;
  margin-top: 4px;
}

.c10::-ms-clear {
  display: none;
}

.c10::placeholder {
  opacity: 0.4;
}

.c10:read-only {
  cursor: not-allowed;
}

.c9 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  padding-top: 24px;
  color: #FFFFFF;
  text-align: center;
}

.c5 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c5 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c5 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c5 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c5 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c5 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

<div
  class="c0 c1"
  width="464"
>
  <div
    class="c2"
    color="light"
  >
    Welcome!
  </div>
  <div
    class="c3"
    kind="danger"
  >
    invalid credentials with looooooooooooooooooooooooooooooooong text
  </div>
  <div
    class="c4"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c5"
    >
      <div
        class="c4"
      >
        <form
          class="c6 c7"
          data-testid="userpassword"
        >
          <div
            class="c8"
          >
            <label
              class="c9"
            >
              Username
              <input
                autocomplete="off"
                class="c10"
                color="text.onLight"
                inputmode="text"
                placeholder="Username"
                type="text"
                value=""
              />
            </label>
          </div>
          <div
            class="c8"
          >
            <div
              class="c11"
              width="100%"
            >
              <label
                class="c9"
              >
                Password
                <input
                  autocomplete="off"
                  class="c10"
                  color="text.onLight"
                  inputmode="text"
                  placeholder="Password"
                  type="password"
                  value=""
                />
              </label>
            </div>
          </div>
          <button
            class="c12"
            kind="primary"
            type="submit"
            width="100%"
          >
            Sign In
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`sso list still renders when local auth is disabled 1`] = `
.c0 {
  box-sizing: border-box;
  background-color: #222C59;
  margin-top: 32px;
  margin-bottom: 32px;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 24px;
  width: 464px;
}

.c3 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c4 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 100%;
  margin-top: 16px;
  margin-bottom: 16px;
}

.c4:active {
  opacity: 0.56;
}

.c4:hover,
.c4:focus {
  background: #651FFF;
}

.c4:active {
  background: #354AA4;
}

.c4:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 100%;
  margin-top: 16px;
  margin-bottom: 0;
}

.c9:active {
  opacity: 0.56;
}

.c9:hover,
.c9:focus {
  background: #651FFF;
}

.c9:active {
  background: #354AA4;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c8 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c1 {
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  padding-top: 24px;
  color: #FFFFFF;
  text-align: center;
}

.c5 {
  background-color: #444444;
  display: block;
  width: 100%;
  border: 1px solid transparent;
  height: 40px;
  position: relative;
  box-sizing: border-box;
}

.c5:hover,
.c5:focus {
  background: rgb(61,61,61);
  border: 1px solid rgb(142,142,142);
}

.c5 .c7 {
  font-size: 20px;
  opacity: 0.87;
}

.c10 {
  background-color: #dd4b39;
  display: block;
  width: 100%;
  border: 1px solid transparent;
  height: 40px;
  position: relative;
  box-sizing: border-box;
}

.c10:hover,
.c10:focus {
  background: rgb(198,67,51);
  border: 1px solid rgb(234,147,136);
}

.c10 .c7 {
  font-size: 20px;
  opacity: 0.87;
}

.c6 {
  align-items: center;
  display: flex;
  justify-content: center;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  width: 56px;
  font-size: 24px;
  text-align: center;
  border-right: 1px solid rgba(0,0,0,0.12);
}

<div
  class="c0 c1"
  width="464px"
>
  <div
    class="c2"
    color="light"
  >
    Welcome!
  </div>
  <div
    class="c3"
    data-testid="sso-list"
  >
    <button
      class="c4 c5"
      color="#444444"
    >
      <div
        class="c6"
      >
        <span
          class="c7 c8 icon icon-github "
          color="light"
          data-testid="icon"
        />
      </div>
      Login with github
    </button>
    <button
      class="c9 c10"
      color="#dd4b39"
    >
      <div
        class="c6"
      >
        <span
          class="c7 c8 icon icon-google-plus "
          color="light"
          data-testid="icon"
        />
      </div>
      Login with google
    </button>
  </div>
</div>
`;

exports[`sso providers rendering 1`] = `
.c0 {
  box-sizing: border-box;
  background-color: #222C59;
  margin-top: 32px;
  margin-bottom: 32px;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 24px;
  width: 464px;
}

.c3 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c16 {
  box-sizing: border-box;
  margin-top: -4px;
  padding-top: 16px;
  text-align: center;
}

.c6 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 100%;
  margin-top: 16px;
  margin-bottom: 16px;
}

.c6:active {
  opacity: 0.56;
}

.c6:hover,
.c6:focus {
  background: #651FFF;
}

.c6:active {
  background: #354AA4;
}

.c6:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c14 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 100%;
  margin-top: 16px;
  margin-bottom: 0;
}

.c14:active {
  opacity: 0.56;
}

.c14:hover,
.c14:focus {
  background: #651FFF;
}

.c14:active {
  background: #354AA4;
}

.c14:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: none;
  text-transform: none;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c17:active {
  opacity: 0.56;
}

.c17:hover,
.c17:focus {
  background: none;
  text-decoration: underline;
}

.c17:disabled {
  background: none;
  color: rgba(255,255,255,0.3);
}

.c10 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c1 {
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  padding-top: 24px;
  color: #FFFFFF;
  text-align: center;
}

.c4 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c7 {
  background-color: #444444;
  display: block;
  width: 100%;
  border: 1px solid transparent;
  height: 40px;
  position: relative;
  box-sizing: border-box;
}

.c7:hover,
.c7:focus {
  background: rgb(61,61,61);
  border: 1px solid rgb(142,142,142);
}

.c7 .c9 {
  font-size: 20px;
  opacity: 0.87;
}

.c11 {
  background-color: #dd4b39;
  display: block;
  width: 100%;
  border: 1px solid transparent;
  height: 40px;
  position: relative;
  box-sizing: border-box;
}

.c11:hover,
.c11:focus {
  background: rgb(198,67,51);
  border: 1px solid rgb(234,147,136);
}

.c11 .c9 {
  font-size: 20px;
  opacity: 0.87;
}

.c12 {
  background-color: #205081;
  display: block;
  width: 100%;
  border: 1px solid transparent;
  height: 40px;
  position: relative;
  box-sizing: border-box;
}

.c12:hover,
.c12:focus {
  background: rgb(28,72,116);
  border: 1px solid rgb(121,150,179);
}

.c12 .c9 {
  font-size: 20px;
  opacity: 0.87;
}

.c13 {
  background-color: #f7931e;
  display: block;
  width: 100%;
  border: 1px solid transparent;
  height: 40px;
  position: relative;
  box-sizing: border-box;
}

.c13:hover,
.c13:focus {
  background: rgb(222,132,27);
  border: 1px solid rgb(250,190,120);
}

.c13 .c9 {
  font-size: 20px;
  opacity: 0.87;
}

.c15 {
  background-color: #2672ec;
  display: block;
  width: 100%;
  border: 1px solid transparent;
  height: 40px;
  position: relative;
  box-sizing: border-box;
}

.c15:hover,
.c15:focus {
  background: rgb(34,102,212);
  border: 1px solid rgb(124,170,243);
}

.c15 .c9 {
  font-size: 20px;
  opacity: 0.87;
}

.c8 {
  align-items: center;
  display: flex;
  justify-content: center;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  width: 56px;
  font-size: 24px;
  text-align: center;
  border-right: 1px solid rgba(0,0,0,0.12);
}

<div
  class="c0 c1"
  width="464"
>
  <div
    class="c2"
    color="light"
  >
    Welcome!
  </div>
  <div
    class="c3"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c4"
    >
      <div
        class="c3"
      >
        <div
          class="c5"
          data-testid="sso-list"
        >
          <button
            class="c6 c7"
            color="#444444"
          >
            <div
              class="c8"
            >
              <span
                class="c9 c10 icon icon-github "
                color="light"
                data-testid="icon"
              />
            </div>
            Login with github
          </button>
          <button
            class="c6 c11"
            color="#dd4b39"
          >
            <div
              class="c8"
            >
              <span
                class="c9 c10 icon icon-google-plus "
                color="light"
                data-testid="icon"
              />
            </div>
            Login with google
          </button>
          <button
            class="c6 c12"
            color="#205081"
          >
            <div
              class="c8"
            >
              <span
                class="c9 c10 icon icon-bitbucket "
                color="light"
                data-testid="icon"
              />
            </div>
            Login with bitbucket
          </button>
          <button
            class="c6 c13"
            color="#f7931e"
          >
            <div
              class="c8"
            >
              <span
                class="c9 c10 icon icon-openid "
                color="light"
                data-testid="icon"
              />
            </div>
            Login with Mission Control
          </button>
          <button
            class="c14 c15"
            color="#2672ec"
          >
            <div
              class="c8"
            >
              <span
                class="c9 c10 icon icon-windows "
                color="light"
                data-testid="icon"
              />
            </div>
            Microsoft
          </button>
        </div>
        <div
          class="c16"
        >
          <button
            class="c17"
            kind="text"
          >
            Other sign-in options
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
